# nelo-take-home

./: PROBLEM_STATEMENT.md  README.md  __init__.py  booking-system.db  main.py  pyproject.toml  test_populate-db.py
app/: booking-system.db  main.py  populate_db.py  test_populate-db.py
app/api/: requests.py  responses.py
app/data/: diner_data.csv
app/reservations/: reservation_manager.py  test_reservation_manager.py
common/tests/: db_setup.py  test_data.py
data/: restaurant_data.csv
models/: db.py
scripts/: book_restaurant.sh  delete_reservation.sh  find_reservation.sh
src/: __init__.py  reservation_manager.py  test_reservation_manager.py
